--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <html> 
 
-<a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+<a href="https://flatironschool.com"> Flatiron School </a>
 
 </html>
